# policy-settings-basic

./: AUTHORS  Makefile.am  autogen.sh  configure.in
basic/: Makefile.am
basic/etc/: Makefile.am
basic/etc/ohm/: Makefile.am
basic/etc/pulse/: Makefile.am  xpolicy.conf
basic/policy/: Makefile.am  accessory.pl  accessory_rules.pl  audio_cork.pl  audio_cork_rules.pl  audio_groups.pl  audio_mute.pl  audio_route.pl  audio_route_rules.pl  audio_volume.pl  audio_volume_rules.pl  context.pl  hwconfig.pl  policy.dres  policy.pl  resource.pl  resource_classes.pl  resource_rules.pl  telephony.pl  video_route.pl
meego/: Makefile  policy-settings-n900.spec.in
rpm/: policy-settings-basic-n900.changes  policy-settings-basic-n900.spec  policy-settings-basic-n900.yaml  policy-settings-basic-n950.changes  policy-settings-basic-n950.spec  policy-settings-basic-n950.yaml
scripts/: plc
